1.0.1rc1/_sources/autoapi/hklpy2/devices/index.rst.txt
devices
=======

.. py:module:: hklpy2.devices

.. autoapi-nested-parse::

   Import: ``hklpy2.devices``

   Ophyd device construction helpers for |hklpy2|.

   These utilities are called during diffractometer creation to build ophyd
   ``Component`` and ``Device`` objects dynamically from axis specifications
   and factory configurations.

   .. autosummary::

       ~VirtualPositionerBase
       ~define_real_axis
       ~dict_device_factory
       ~dynamic_import
       ~make_component
       ~make_dynamic_instance
       ~parse_factory_axes






Module Contents
---------------

.. py:class:: VirtualPositionerBase(*, physical_name: str = '', **kwargs)

   .. container:: import-path

      Import: ``hklpy2.devices.VirtualPositionerBase``


   Bases: :py:obj:`ophyd.SoftPositioner`


   Base class for a diffractometer's virtual axis.

   This base class also serves as an example where the virtual axis is twice
   the value of the physical axis.  It is used as a Component of a
   'DiffractometerBase' definition.  The ``physical_name`` is the name of a
   sibling positioner attribute.


   .. py:method:: forward(physical: float) -> float

      Return virtual position from physical position.

      Subclass should override.



   .. py:method:: inverse(virtual: float) -> float

      Return physical position from virtual position.

      Subclass should override.



   .. py:attribute:: physical


.. py:function:: define_real_axis(specs: None | str | ~hklpy2.typing.KeyValueMap, kwargs: ~hklpy2.typing.KeyValueMap) -> tuple[str, ~collections.abc.Sequence, ~collections.abc.Mapping]

   .. container:: import-path

      Import: ``hklpy2.devices.define_real_axis``


   Return class and kwargs of a real axis from its 'specs'.


.. py:function:: describe_aux(diffractometer: object, name: str) -> dict

   .. container:: import-path

      Import: ``hklpy2.devices.describe_aux``


   Build a single ``axes.auxiliary_axes`` record for ``name``.

   Categorises the auxiliary into one of the schema-v2 categories:

   * ``"scalar"`` — a plain :class:`~ophyd.PositionerBase` (the historic
     default; the round-tripped simulator stand-in is an
     :class:`~ophyd.SoftPositioner`).
   * ``"pseudo_positioner"`` — a nested
     :class:`~ophyd.pseudopos.PseudoPositioner`; sub-axis names are
     recorded as ordered ``pseudos`` / ``reals`` lists.  ``class`` /
     ``module`` are advisory metadata only — never imported by hklpy2 on
     restore.


.. py:function:: dict_device_factory(data: ~hklpy2.typing.KeyValueMap, **kwargs: Any) -> type

   .. container:: import-path

      Import: ``hklpy2.devices.dict_device_factory``


   Create a ``DictionaryDevice()`` class using the supplied dictionary.

   .. index:: factory; dict_device_factory, dict_device_factory

.. py:function:: dynamic_import(full_path: str) -> type

   .. container:: import-path

      Import: ``hklpy2.devices.dynamic_import``


   Import the object given its import path as text.

   Motivated by specification of class names for plugins
   when using ``apstools.devices.ad_creator()``.

   EXAMPLES::

       klass = dynamic_import("ophyd.EpicsMotor")
       m1 = klass("gp:m1", name="m1")

       creator = dynamic_import("hklpy2.diffract.creator")
       fourc = creator(name="fourc")

   From the `apstools <https://github.com/BCDA-APS/apstools>`_ package.


.. py:function:: make_aux_pseudo_positioner_class(name: str, pseudos: ~collections.abc.Sequence[str], reals: ~collections.abc.Sequence[str]) -> type

   .. container:: import-path

      Import: ``hklpy2.devices.make_aux_pseudo_positioner_class``


   Build a synthetic :class:`~ophyd.pseudopos.PseudoPositioner` subclass
   with the given sub-axis names.

   The resulting class is **structural only**: ``forward()`` and
   ``inverse()`` return zeros for every sub-axis.  Its purpose is to
   let downstream code (printers, plan inspection, etc.) traverse the
   same component tree the original device exposed.


.. py:function:: make_component(call_name: Any, *args: Any, **kwargs: Any) -> ~ophyd.Component

   .. container:: import-path

      Import: ``hklpy2.devices.make_component``


   Create an :class:`~ophyd.Component` for a custom ophyd Device class.

   ``call_name`` may be either a dotted import path (``str``) or an
   already-resolved callable (``type``).  The callable form is used by
   :func:`hklpy2.run_utils.simulator_from_config` when restoring a
   nested ``PseudoPositioner`` auxiliary whose synthetic stand-in class
   is built at runtime and therefore cannot be addressed by an import
   path.

   .. versionchanged:: 0.7.0
      Accept a callable in addition to a dotted import-path string.
      See :issue:`388`.


.. py:function:: make_dynamic_instance(call_name: str, *args: Any, **kwargs: Any) -> Any

   .. container:: import-path

      Import: ``hklpy2.devices.make_dynamic_instance``


   Return an instance of the Python 'call_name'.


.. py:function:: parse_factory_axes(*, space: str | None = None, axes: ~hklpy2.typing.KeyValueMap | None | ~collections.abc.Sequence[str] = None, order: ~collections.abc.Sequence[str] | None = None, canonical: ~collections.abc.Sequence[str] | None = None, labels: ~collections.abc.Sequence[str] | None = None, **_ignored: Any) -> ~collections.abc.Mapping[str, ~ophyd.Component | ~collections.abc.Sequence[str]]

   .. container:: import-path

      Import: ``hklpy2.devices.parse_factory_axes``


   Parse a set of axis specifications, return Device class attributes.

   Called from the diffract.diffractometer_class_factory().


